--- a/index.html
+++ b/index.html
@@ -115,56 +115,65 @@
         <section id="sobre-mi">
             <h2>Sobre mí</h2>
             <p>
-                ¡Hola! Soy Andy Josué Alcívar Sánchez, apasionado por el desarrollo web, el diseño y la tecnología. 
-                Tengo experiencia en HTML, CSS, JavaScript, React, Node.js y más. 
+                ¡Hola! Soy Andy Josué Alcívar Sánchez, apasionado por el desarrollo web, el diseño y la tecnología.
+                Tengo experiencia en HTML, CSS, JavaScript, React, Node.js y más.
                 Me encanta ayudar a personas y empresas a tener una presencia profesional en internet.
             </p>
             <p>
-                Ofrezco servicios de creación de páginas web, tiendas online, landing pages, 
+                Ofrezco servicios de creación de páginas web, tiendas online, landing pages,
                 mantenimiento y optimización de sitios existentes.
             </p>
         </section>
 
-        <!-- Trabajos realizados -->
-        <section id="trabajos">
-            <h2>Mis trabajos realizados</h2>
+        <!-- Mis proyectos personales -->
+        <section id="proyectos">
+            <h2>Mis proyectos personales</h2>
             <div class="projects-grid">
                 
-                <!-- Proyecto 1 -->
+                <!-- Proyecto 1: Proyecto-de-POO -->
                 <div class="project">
-                    <img src="https://via.placeholder.com/400x200?text=Proyecto+1" alt="Proyecto 1">
+                    <img src="https://via.placeholder.com/400x200?text=Proyecto+de+POO" alt="Proyecto de POO en Python">
                     <div class="project-info">
-                        <h3>Tienda Online de Ropa</h3>
-                        <p>Página web completa con carrito de compras y pasarela de pago.</p>
-                        <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript, Stripe</p>
-                        <a href="https://ejemplo.com" target="_blank">Ver proyecto →</a>
+                        <h3>Proyecto de POO - Sistema en Python</h3>
+                        <p>Sistema desarrollado aplicando conceptos de Programación Orientada a Objetos.</p>
+                        <p><strong>Tecnologías:</strong> Python</p>
+                        <a href="https://github.com/andyalcivarj-cpu/Proyecto-de-POO" target="_blank">Ver en GitHub →</a>
                     </div>
                 </div>
 
-                <!-- Proyecto 2 -->
+                <!-- Proyecto 2: AndyAlcivar -->
                 <div class="project">
-                    <img src="https://via.placeholder.com/400x200?text=Proyecto+2" alt="Proyecto 2">
+                    <img src="https://via.placeholder.com/400x200?text=Página+Navideña" alt="Página Navideña">
                     <div class="project-info">
-                        <h3>Landing Page para Curso Online</h3>
-                        <p>Diseño moderno y optimizado para conversiones.</p>
-                        <p><strong>Tecnologías:</strong> HTML, CSS, Bootstrap, Formspree</p>
-                        <a href="https://ejemplo.com" target="_blank">Ver proyecto →</a>
+                        <h3>Página Navideña</h3>
+                        <p>Diseño web festivo con animaciones y estilo navideño creativo.</p>
+                        <p><strong>Tecnologías:</strong> HTML, CSS</p>
+                        <a href="https://github.com/andyalcivarj-cpu/AndyAlcivar" target="_blank">Ver en GitHub →</a>
                     </div>
                 </div>
 
-                <!-- Proyecto 3 -->
+                <!-- Proyecto 3: Navidad- (asumiendo que es otro navideño o similar) -->
                 <div class="project">
-                    <img src="https://via.placeholder.com/400x200?text=Proyecto+3" alt="Proyecto 3">
+                    <img src="https://via.placeholder.com/400x200?text=Navidad" alt="Proyecto Navidad">
                     <div class="project-info">
-                        <h3>Portafolio Personal para Fotógrafo</h3>
-                        <p>Galería de imágenes responsive y elegante.</p>
-                        <p><strong>Tecnologías:</strong> HTML, CSS, Lightbox JS</p>
-                        <a href="https://ejemplo.com" target="_blank">Ver proyecto →</a>
+                        <h3>Navidad - Página Temática</h3>
+                        <p>Otro proyecto web con temática navideña y diseño responsive.</p>
+                        <p><strong>Tecnologías:</strong> HTML, CSS</p>
+                        <a href="https://github.com/andyalcivarj-cpu/Navidad-" target="_blank">Ver en GitHub →</a>
                     </div>
                 </div>
 
-                <!-- Agrega más proyectos aquí cuando los tengas -->
-                
+                <!-- Proyecto 4: AndyAlcivarSanchez -->
+                <div class="project">
+                    <img src="https://via.placeholder.com/400x200?text=Portafolio+Personal" alt="AndyAlcivarSanchez">
+                    <div class="project-info">
+                        <h3>AndyAlcivarSanchez</h3>
+                        <p>Proyecto personal/experimental en desarrollo front-end.</p>
+                        <p><strong>Tecnologías:</strong> HTML, CSS</p>
+                        <a href="https://github.com/andyalcivarj-cpu/AndyAlcivarSanchez" target="_blank">Ver en GitHub →</a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
